[package]
name = "forceps"
version = "0.4.1"
authors = ["Jacob Parker <blocckba5her@gmail.com>"]
description = "An easy-to-use async & on-disk database"
readme = "README.md"
repository = "https://github.com/blockba5her/forceps"
license = "MIT"
keywords = ["database", "cache", "async", "persistent", "disk"]
categories = ["asynchronous", "database"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
hex = "0.4.3"
md5 = "0.7.0"
rand = {version = "0.8.3", features = ["small_rng", "getrandom"], default-features = false}
bson = "2.6.1"
serde = {version = "1.0.125", features = ["derive"]}
tokio = {version = "1.5.0", features = ["fs", "io-util"]}
bytes = "1.0.1"
async-trait = "0.1.50"
lru = "0.11.0"
parking_lot = "0.12.1"

[dev-dependencies]
tokio = {version = "1.5.0", features = ["full"]}
criterion = {version = "0.5.1", features = ["async_tokio", "html_reports"]}

[lib]
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
codegen-units = 1

[profile.bench]
codegen-units = 1
lto = true
