[package]
name = "forceps"
version = "0.4.1"
authors = ["Jacob Parker <blocckba5her@gmail.com>"]
description = "An easy-to-use async & on-disk database"
readme = "README.md"
repository = "https://github.com/DevBlocky/forceps"
license = "MIT"
keywords = ["database", "cache", "async", "persistent", "disk"]
categories = ["asynchronous", "database"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
hex = "0.4.3"
md5 = "0.8.0"
rand = "0.9.2"
bson = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["fs", "io-util"] }
bytes = "1.10.1"
lru = "0.16.2"
parking_lot = "0.12.5"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }

[lib]
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
codegen-units = 1

[profile.bench]
codegen-units = 1
lto = true
