[package]
name = "forceps"
version = "0.4.1"
authors = ["Jacob Parker <blocckba5her@gmail.com>"]
description = "An easy-to-use async & on-disk database"
readme = "README.md"
repository = "https://github.com/DevBlocky/forceps"
license = "MIT"
keywords = ["database", "cache", "async", "persistent", "disk"]
categories = [
    "asynchronous",
    "database",
    "database-implementations",
    "caching",
    "filesystem",
]
edition = "2024"

[features]
default = ["md5"]
md5 = ["dep:md5"]
xxhash = ["dep:twox-hash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
bson = "3.0.0"
bytes = "1.10.1"
hex = "0.4.3"
lru = "0.16.2"
md5 = { version = "0.8.0", optional = true }
parking_lot = "0.12.5"
rand = { version = "0.9.2", features = ["small_rng"], default-features = false}
serde = {version = "1.0.125", features = ["derive"]}
sled = "0.34.7"
tokio = {version = "1.48.0", features = ["fs", "io-util"]}
twox-hash = { version = "1.6.3", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }

[lib]
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
codegen-units = 1

[profile.bench]
codegen-units = 1
lto = true